@@ -1,4 +1,4 @@
-& 1.8.4p4
+& 1.8.4p5
 & changes
 This is a list of changes in this patchlevel which are probably of
 interest to players. More information about new commands and functions
@@ -11,6 +11,13 @@ help topics named for each release (e.g. 'help 1.7.2p30').
 A list of the patchlevels associated with each release can
 be read in 'help patchlevels'.
 
+Version 1.8.4 patchlevel 5                                 ??? ??,  2012
+
+Functions:
+ * Restrictions for the beep() function can now be modified with @function.
+   Suggested by Paige. [MG]
+
+& 1.8.4p4
 Version 1.8.4 patchlevel 4                                 May 05,  2011
 
 Major changes:
